--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,29 +42,6 @@ header nav ul li a {
     font-size: 22px;
 }
 
-footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-}
-
-footer h2 {
-    display: inline;
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-}
-
-footer div {
-    float:right;
-    line-height: 1.5;
-    text-align: right;
-}
-
-footer a {
-    color: #024e76
-}
-
 section {
     padding: 60px;
 }
@@ -176,4 +153,74 @@ section {
 
 .steps span {
     font-size:38px;
+}
+
+.trainers {
+    text-align:center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;  
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height:1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div {
+    float:right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: #024e76
 }
