--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,28 @@ section {
     text-align: right;
 }
 
+.contact {
+    background:#024e76;
+    text-align: center;
+}
+
+.contact h2 {
+    color:#fce138
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
 footer {
     background: #fce138;
     width: 100%;
