--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ header nav ul {
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 section {
