--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,10 +115,6 @@ section {
     font-size:16px;
 }
 
-.intro {
-    text-align:center;
-}
-
 
 .intro p {
     line-height: 1.7;
@@ -126,15 +122,17 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: solid 3px;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -146,7 +144,6 @@ section {
 }
 
 .steps {
-    text-align: center;
     background: #fce138
 }
 
@@ -174,9 +171,6 @@ section {
     font-size:38px;
 }
 
-.trainers {
-    text-align:center;
-}
 
 .trainer {
     width: 900px;
@@ -213,17 +207,9 @@ section {
     line-height:1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
 
 .contact {
     background:#024e76;
-    text-align: center;
 }
 
 .contact h2 {
@@ -282,4 +268,16 @@ footer div {
 
 footer a {
     color: #024e76
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
