--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,12 +187,12 @@ section {
     align-items: center;
 }
 
-.step-img {
+.step-image {
     flex: 1 12%;
     margin-right: 20px;
 }
 
-.step-img img {
+.step-image img {
     max-width: 100%;
 }
 
